force-app/main/default/objects/Photo_Inspection__c/Photo_Inspection__c.object-meta.xml
<CustomObject>
    <label>Work Order Photo Inspection</label>
    <nameField>
        <displayFormat>WPI-{000}</displayFormat>
        <label>Photo Inspection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Photo Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>