force-app/main/default/objects/Photo_Inspection__c/fields/Photo_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Photo_Capture_Date__c</fullName>
    <label>Photo Capture Date</label>
    <type>DateTime</type>
</CustomField>