force-app/main/default/objects/Photo_Inspection__c/fields/Photo_Note__c.field-meta.xml
<CustomField>
    <fullName>Photo_Note__c</fullName>
    <label>Photo Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>